syntax = "proto3"; //Version de la sintaxis que estamos usando

option csharp_namespace = "AdministratorWebApi.GrpcClient"; //Indica cual es el namespace donde vamos a implementar nuestro servicio

package greet;

// The greeting service definition.
service Greeter {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

  rpc GetGames (GetGamesRequest) returns (GetGamesResponse);
  rpc CreateGame (CreateGameRequest) returns (CreateGameResponse);
  rpc UpdateGame (UpdateGameRequest) returns (UpdateGameResponse);
  rpc DeleteGame (DeleteGameRequest) returns (DeleteGameResponse);

  rpc GetUserGames(GetUserGamesRequest) returns (GetUserGamesResponse);

  rpc BuyGame (BuyGameRequest) returns (BuyGameResponse);
  rpc RefundGame (RefundGameRequest) returns (RefundGameResponse);
}

// The request message containing the user's name.
message GetUsersRequest {

}
message GetUsersResponse {
  string message = 1;
}

message CreateUserRequest {
  string userName = 1;
  string password = 2;
}
message CreateUserResponse {
  string message = 1;
}

message UpdateUserRequest {
  string userName = 1;
  string newUserName = 2;
  string newPassword = 3;
}
message UpdateUserResponse {
  string message = 1;
}

message DeleteUserRequest {
  string userName = 1;
}
message DeleteUserResponse {
  string message = 1;
}

message GetGamesRequest {

}
message GetGamesResponse {
  string message = 1;
}

message CreateGameRequest {
  string title = 1;
  string gender = 2;
  string sinopsis = 3;
  int32 ageAllowed = 4;
}
message CreateGameResponse {
  string message = 1;
}

message UpdateGameRequest {
  string title = 1;
  string newTitle = 2;
  string newGender = 3;
  string newSinopsis = 4;
  int32 newAgeAllowed = 5;
}

message UpdateGameResponse {
  string message = 1;
}

message DeleteGameRequest {
  string title = 1;
}
message DeleteGameResponse {
  string message = 1;
}

message GetUserGamesRequest{
  string userName = 1;
}
message GetUserGamesResponse{
  string message = 1;
}

message BuyGameRequest {
  string userName = 1;
  string title = 2;
}
message BuyGameResponse {
  string message = 1;
}

message RefundGameRequest {
  string userName = 1;
  string title = 2;
}
message  RefundGameResponse {
  string message = 1;
}